@@ -420,6 +420,12 @@ This variable specifies the dump format.
   much faster. You will need *crash*(8) version 6.0.7 or later to open the
   dump file.
 
+*snappy*::
+  _snappy_ is very similar to _lzo_, but it uses the Snappy compression
+  algorithm. It is usually considerably faster and achieves approximately
+  the same compression ratio. Snappy is optimized for 64-bit, little-endian
+  architectures (e.g. x86_64).
+
 Default: "compressed"
 
 
