@@ -188,7 +188,7 @@ KDUMP_VERBOSE=3
 #
 KDUMP_DUMPLEVEL=31
 
-## Type:        list(,none,ELF,compressed,lzo)
+## Type:        list(,none,ELF,compressed,lzo,snappy)
 ## Default:     "compressed"
 ## ServiceRestart:	kdump
 #
